# Calculator

./: .gitignore  CMakeLists.txt  CMakePresets.json  CalculatorConfig.cmake.in  README.md  vcpkg.json
.github/: ci.yml
.github/workflows/: ci.yml
Calculator_Benchmark/: CMakeLists.txt
Calculator_Benchmark/src/: speedtest.cpp
Calculator_Test/: CMakeLists.txt
Calculator_Test/src/: speedtest.cpp  tests.cpp
cmake/Modules/: FindCATCH2.cmake
src/calc/: cache.cpp  cache.h  calculator.cpp  calculator.h  calculatorexception.h  symbol.cpp  symbol.h
srcTest/: main.cpp  speedtest.cpp  tests.cpp
